This temporarily removes submit button hover/focus state as it introduced contrast issues.

--- a/foia_hub/static/sass/main.scss
+++ b/foia_hub/static/sass/main.scss
@@ -556,7 +556,7 @@ footer {
   position: relative;
   top: -3em;
   &:focus, &:hover {
-    background-color: $medium-blue;
+    // background-color: $medium-blue;
   }
 }
 
